--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@directus/sdk": "^10.3.5",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "react": "^18",
