--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.284.0",
     "negotiator": "^0.6.3",
     "next": "13.5.4",
+    "next-seo": "^6.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
